codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_additional_permissions_prompt.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "normalize_snapshot_paths(render_overlay_lines(&view, 120))"
---

  要运行以下命令吗？

  原因：need filesystem access

  权限规则：网络；读取 `/tmp/readme.txt`；写入 `/tmp/out.txt`

  $ cat /tmp/readme.txt

› 1. 是，继续 (y)
  2. 否，并告诉 Codex 应如何调整 (Esc)

  按下 Enter 以确认，或按下 Esc 以取消
