codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_cross_thread_prompt.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "render_overlay_lines(&view, 80)"
---

  要运行以下命令吗？

  线程：Robie [explorer]

  $ echo hi

› 1. 是，继续 (y)
  2. 否，并告诉 Codex 应如何调整 (Esc)

  按下 Enter 以确认，或按下 Esc 以取消，或按下 o 以打开对话
