codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_patch_destination_unavailable.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "normalize_snapshot_paths(render_overlay_lines(&view, 120))"
---
  要进行以下编辑吗？

  说明：应用建议的文件编辑
  目标位置：不可用

› 1. 是，继续 (y)
  2. 是，并且不再询问这些文件 (a)
  3. 否，并告诉 Codex 应如何调整 (Esc)

  按下 Enter 以确认，或按下 Esc 以取消
