codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_permissions_prompt.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "normalize_snapshot_paths(render_overlay_lines(&view, 120))"
---

  要授予这些权限吗？

  原因：need workspace access

  权限规则：网络；读取 `/tmp/readme.txt`；写入 `/tmp/out.txt`

› 1. 是，授予本轮所需权限 (y)
  2. 是，授予本轮所需权限并启用严格自动审查 (r)
  3. 是，在本次会话中授予这些权限 (a)
  4. 否，不授予权限并继续 (d)

  按下 Enter 以确认，或按下 Esc 以取消
