codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__network_exec_prompt.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 12 },
    content: [
        "                                                                                                    ",
        "  要批准访问网络“example.com”吗？                                                                              ",
        "                                                                                                    ",
        "  原因：network request blocked                                                                         ",
        "                                                                                                    ",
        "                                                                                                    ",
        "› 1. 是，仅此次 (y)                                                                                 ",
        "  2. 是，并在本次对话中允许此主机 (a)                                                               ",
        "  3. 是，并在以后允许此主机 (p)                                                                     ",
        "  4. 否，并告诉 Codex 应如何调整 (Esc)                                                             ",
        "                                                                                                    ",
        "  按下 Enter 以确认，或按下 Esc 以取消                                                                 ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 24, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 30, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 35, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 25, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 36, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
